Add navigation with styling

--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,15 @@ figcaption {
   font-style: italic;
   text-align: center;
 }
+
+ul {
+  list-style: none;
+}
+
+ul li a {
+  color: #793284;
+}
+
+ul li a:hover {
+  color: #b42885;
+}
