Fix small Markbot errors

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ img {
 h1, h2, h3, h4, h5, h6 {
   color: #5d8432;
   text-transform: uppercase;
-  font-family: 'Patua One', cursive;
+  font-family: "Patua One", cursive;
 }
 
 figcaption {
@@ -19,15 +19,16 @@ figcaption {
   text-align: center;
 }
 
-ul {
+ol {
   list-style: none;
-  font-family: 'Patua One', cursive;
+  text-decoration: underline;
+  font-family: "Patua One", cursive;
 }
 
-ul li a {
+ol li a {
   color: #793284;
 }
 
-ul li a:hover {
+ol li a:hover {
   color: #b42885;
 }
