--- a/css/main.css
+++ b/css/main.css
@@ -14,19 +14,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 figcaption {
-  font-size: 1.5em;
+  font-size: .9em;
+  line-height: 1.5em;
   font-style: italic;
   text-align: center;
 }
 
+.big-caption {
+  font-size: 1em;
+  line-height: 1.5em;
+}
+
 ol {
   list-style: none;
-  text-decoration: underline;
   font-family: "Patua One", cursive;
 }
 
 ol li a {
   color: #793284;
+  text-decoration: none;
 }
 
 ol li a:hover {
